--- a/src/libstrongswan/plugins/aesni/Makefile.am
+++ b/src/libstrongswan/plugins/aesni/Makefile.am
@@ -2,6 +2,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/src/libstrongswan
 
 AM_CFLAGS = \
+	-maes \
 	$(PLUGIN_CFLAGS)
 
 if MONOLITHIC
@@ -11,6 +12,7 @@ plugin_LTLIBRARIES = libstrongswan-aesni.la
 endif
 
 libstrongswan_aesni_la_SOURCES = \
+	aesni_key.h aesni_key.c \
 	aesni_plugin.h aesni_plugin.c
 
 libstrongswan_aesni_la_LDFLAGS = -module -avoid-version
