aesni: Implement a AES-NI based CBC crypter using the key schedule

--- a/src/libstrongswan/plugins/aesni/Makefile.am
+++ b/src/libstrongswan/plugins/aesni/Makefile.am
@@ -13,6 +13,7 @@ endif
 
 libstrongswan_aesni_la_SOURCES = \
 	aesni_key.h aesni_key.c \
+	aesni_cbc.h aesni_cbc.c \
 	aesni_plugin.h aesni_plugin.c
 
 libstrongswan_aesni_la_LDFLAGS = -module -avoid-version
