aesni: Add a GCM AEAD based on the AES-NI key schedule

--- a/src/libstrongswan/plugins/aesni/Makefile.am
+++ b/src/libstrongswan/plugins/aesni/Makefile.am
@@ -3,6 +3,7 @@ AM_CPPFLAGS = \
 
 AM_CFLAGS = \
 	-maes \
+	-mpclmul \
 	-mssse3 \
 	$(PLUGIN_CFLAGS)
 
@@ -17,6 +18,7 @@ libstrongswan_aesni_la_SOURCES = \
 	aesni_cbc.h aesni_cbc.c \
 	aesni_ctr.h aesni_ctr.c \
 	aesni_ccm.h aesni_ccm.c \
+	aesni_gcm.h aesni_gcm.c \
 	aesni_xcbc.h aesni_xcbc.c \
 	aesni_cmac.h aesni_cmac.c \
 	aesni_plugin.h aesni_plugin.c
