vici: Honor DESTDIR when installing Python Egg
If `--with-pythoneggdir` is not set we fall back to the site-packages
directory as determined by the AM_PATH_PYTHON macro.

We also set PYTHONPATH explicitly so easy_install is happy if DESTDIR is set.

WIP: The problem with this is that easy_install creates or modifies a file
called easy-install.pth in the installation directory. So it's not actually
possible to simply copy the results in DESTDIR over to the actual system as
that file would have to be merged with any existing one.

 #914

--- a/src/libcharon/plugins/vici/python/Makefile.am
+++ b/src/libcharon/plugins/vici/python/Makefile.am
@@ -25,7 +25,8 @@ clean-local: setup.py
 	rm -rf vici.egg-info dist setup.py
 
 install-exec-local: dist/vici-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg
-	$(EASY_INSTALL) $(PYTHONEGGINSTALLDIR) \
+	PYTHONPATH=$(DESTDIR)$(PYTHONEGGDIR) \
+	$(EASY_INSTALL) --install-dir $(DESTDIR)$(PYTHONEGGDIR) \
 		dist/vici-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg
 
 if USE_PY_TEST
